--- a/composer.json
+++ b/composer.json
@@ -34,9 +34,9 @@
             "type": "package",
             "package": {
                 "name": "phku-hk/terrorwave-blitz",
-                "version": "master",
+                "version": "1.0.5",
                 "dist": {
-                    "url": "https://github.com/phku-hk/terrorwave-blitz/releases/download/v1.0.1/source_full_v1.0.1.zip",
+                    "url": "https://github.com/phku-hk/terrorwave-blitz/releases/download/v1.0.5/source_full_v1.0.5.zip",
                     "type": "zip"
                 }
             }
@@ -45,7 +45,7 @@
     "require": {
         "php": "^8.1",
         "abyssonym/terrorwave": "dev-master",
-        "phku-hk/terrorwave-blitz": "master",
+        "phku-hk/terrorwave-blitz": "1.0.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
